# pyrealm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  wheels.yml
native/: create_fixture.cpp  module.cpp
src/pyrealm/: __init__.py  _native.pyi  reader.py
src/pyrealm_forensics/: __init__.py  _native.pyi  cli.py  models.py  parser.py  reader.py
tests/: test_cli.py  test_interfaces.py  test_models.py  test_parser.py  test_reader.py
tests/fixtures/: README.md  encrypted.realm
