[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrealm-forensics"
version = "0.1.0"
description = "Read-only structural scanner and carver for Android Realm database files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "pyrealm contributors" }]
dependencies = []

[project.scripts]
pyrealm = "pyrealm_forensics.cli:main"

[dependency-groups]
dev = [
    "cmake>=4.0",
    "ninja>=1.13",
    "ruff>=0.12",
    "ty>=0.0.1a16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyrealm_forensics"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.11"
