[build-system]
requires = [
    "pybind11>=3.0",
    "scikit-build-core>=0.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyrealm-forensics"
version = "0.1.0"
description = "Read-only logical reader, structural scanner, and carver for Realm databases"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "pyrealm contributors" }]
dependencies = []

[project.scripts]
pyrealm = "pyrealm_forensics.cli:main"

[dependency-groups]
dev = [
    "cibuildwheel>=3.2",
    "cmake>=4.0",
    "ninja>=1.13",
    "pybind11>=3.0.4",
    "pytest>=9.1.1",
    "ruff>=0.12",
    "scikit-build-core>=0.12.2",
    "ty>=0.0.1a16",
]

[tool.scikit-build]
build-dir = "build-v13/{wheel_tag}"
cmake.build-type = "Release"
wheel.packages = ["src/pyrealm_forensics"]

[tool.ruff]
exclude = ["build", "build-*"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.11"
